fix add grade, upload file
